Make sure 100% doesn't shift the table

--- a/components/main.scss
+++ b/components/main.scss
@@ -154,7 +154,7 @@ html ::selection {
   }
 
   td:hover, td a:hover {
-    font-size: 1.6rem;
+    font-weight: 400;
   }
 
   th.highlight {
